Avoid wrapping long branch and tag names
Make the branch and tag column 650px wide, and give 300px to the
branch names. This should reduce line wrapping on long names.

--- a/gitiles-servlet/src/main/resources/com/google/gitiles/static/gitiles.css
+++ b/gitiles-servlet/src/main/resources/com/google/gitiles/static/gitiles.css
@@ -102,15 +102,15 @@ table.list td {
   padding-bottom: 5px; /* VPADDING */
 }
 .repository-refs {
-  width: 450px;
+  width: 650px;
 }
 .repository-branches {
   float: left;
-  width: 200px;
+  width: 300px;
 }
 .repository-tags {
   float: right;
-  width: 250px;
+  width: 350px;
 }
 .clone-line {
   background-color: #e5ecf9; /* BOX_BACKGROUND */
